Version 5.9.24
- Fixed using local constants for default parameters in methods
- Improved output of -f, and added #include'd files to that output

Version 5.9.23
- Enable DEBUG in inline assembly if -gbrk is active
- Fixed .lbl+n expressions in inline assembly
- Fixed Spin2 loops so that the correct value is in the variable if the loop is quit
- Fixed Nucode evaluation of some bit operations
- Fixed a crash when duplicate names declared in anonymous structs
- Made sure all registers involved in a large data structure are allocated if any of them are used

Version 5.9.22
- Added control over individual warnings
- Define a symbol __DEBUG__ when -g or -gbrk is given
- Fixed indirect method pointer calls in Spin2 (like LONG[x](foo))
- Fixed compiling some boolean expressions involving 64 bit integers
- Fixed QCOS and QSIN when used with angles larger than twopi
- Fixed some signed/unsigned conflicts in Spin constant evaluation
- Made foo.[n] produce the same results on P2 as the usual Spin2 compiler, by having it extract the upper bits to find the range of bits affected
- New optimization to use SUMxx instructions if possible (thanks Ada!)
- New optimizations for memcpy/memmove (again, thanks to Ada)
- Removed <- and -> operators from Spin2 (use ROL and ROR instead)
- Revised P2 frequency calculations to match Chip's latest version
- Some floating point optimizations from Ada
- Several other miscellaneous optimizations from Ada
- Spin2cpp now respects '!cse' optimization flag.
- Warnings about C strings being passed to non-const pointers now only happen with -Wall

Version 5.9.21
- Automatically zero local Spin2 variables
- Fixed loop test for downwards loops with steps > 1.
- Fixed some problems with variable offsets in Spin
- Fixed an incorrect read/write optimization affecting assembly output
- Improved handling of two dimensional arrays in BASIC
- Improved handling of method pointers in Spin2
- Optimized ZEROX (thanks Ada)
- Optimize some "obvious" 64 bit shifts