@@ -133,7 +133,7 @@ PASMBACK = outasm.c assemble_ir.c optimize_ir.c inlineasm.c compress_ir.c
 BCBACK = outbc.c bcbuffers.c bcir.c bc_spin1.c
 NUBACK = outnu.c nuir.c nupeep.c
 CPPBACK = outcpp.c cppfunc.c outgas.c cppexpr.c cppbuiltin.c
-ZIPBACK = zip.c
+ZIPBACK = outzip.c zip.c
 SPINSRCS = common.c case.c spinc.c $(LEXSRCS) functions.c cse.c loops.c hloptimize.c hltransform.c types.c pasm.c outdat.c outlst.c outobj.c spinlang.c basiclang.c clang.c $(PASMBACK) $(BCBACK) $(NUBACK) $(CPPBACK) $(ZIPBACK) $(MCPP) version.c becommon.c brkdebug.c
 
 LEXOBJS = $(LEXSRCS:%.c=$(BUILD)/%.o)
