@@ -4985,8 +4985,11 @@ static int mz_mkdir(const char *pDirname) {
 #define MZ_MKDIR(d) mkdir(d, 0755)
 
 #else
-#pragma message(                                                               \
+/*
+#pragma message(                                                      \
     "Using fopen, ftello, fseeko, stat() etc. path for file I/O - this path may not support large files.")
+*/
+    
 #ifndef MINIZ_NO_TIME
 #include <utime.h>
 #endif
